rstsr-aocl-ffi/header/blis.h

		// Typedef official complex types to BLIS complex type names.
		typedef  float complex scomplex;
		typedef double complex dcomplex;
	typedef struct scomplex
	{
		float  real;
		float  imag;
	} scomplex;
	typedef struct dcomplex
	{
		double real;
		double imag;
	} dcomplex;
typedef int32_t   f77_int;
typedef int64_t   f77_int;
typedef long int  f77_int;
#define cgemv                     CGEMV
#define cgerc                     CGERC
#define cgeru                     CGERU
#define crotg                     CROTG
#define cscal                     CSCAL
#define csrot                     CSROT
#define csscal                    CSSCAL
#define ctrmv                     CTRMV
#define ctrsv                     CTRSV
#define dgemv                     DGEMV
#define dger                      DGER
#define dnrm2                     DNRM2
#define drot                      DROT
#define drotg                     DROTG
#define drotm                     DROTM
#define drotmg                    DROTMG
#define dscal                     DSCAL
#define dtrmv                     DTRMV
#define dtrsv                     DTRSV
#define dznrm2                    DZNRM2
#define scnrm2                    SCNRM2
#define sgemv                     SGEMV
#define sger                      SGER
#define snrm2                     SNRM2
#define srot                      SROT
#define srotg                     SROTG
#define srotm                     SROTM
#define srotmg                    SROTMG
#define sscal                     SSCAL
#define strmv                     STRMV
#define strsv                     STRSV
#define zdrot                     ZDROT
#define zdscal                    ZDSCAL
#define zgemv                     ZGEMV
#define zgerc                     ZGERC
#define zgeru                     ZGERU
#define zrotg                     ZROTG
#define zscal                     ZSCAL
#define ztrmv                     ZTRMV
#define ztrsv                     ZTRSV
//typedef char *address;
//typedef short int shortint;
typedef float bla_real;
typedef double bla_double;
typedef scomplex bla_scomplex;
typedef dcomplex bla_dcomplex;
BLIS_EXPORT_BLIS void srotg(float  *sa, float  *sb, float  *c, float  *s);
BLIS_EXPORT_BLIS void srotmg(float  *sd1, float  *sd2, float  *sx1, const float  *sy1, float  *sparam);
BLIS_EXPORT_BLIS void srot(const f77_int *n, float  *sx, const f77_int *incx, float  *sy, const f77_int *incy, const float  *c, const float  *s);
BLIS_EXPORT_BLIS void srotm(const f77_int *n, float  *sx, const f77_int *incx, float  *sy, const f77_int *incy, const float  *sparam);
BLIS_EXPORT_BLIS void sscal(const f77_int *n, const float  *sa, float  *sx, const f77_int *incx);
BLIS_EXPORT_BLIS float snrm2(const f77_int *n, const float  *x,  const f77_int *incx);
BLIS_EXPORT_BLIS float scnrm2(const f77_int *n, const scomplex  *x,  const f77_int *incx);
BLIS_EXPORT_BLIS void drotg(double *da, double *db, double *c, double *s);
BLIS_EXPORT_BLIS void drotmg(double *dd1, double *dd2, double *dx1, const double *dy1, double *dparam);
BLIS_EXPORT_BLIS void drot(const f77_int *n, double *dx, const f77_int *incx, double *dy, const f77_int *incy, const double *c, const double *s);
BLIS_EXPORT_BLIS void drotm(const f77_int *n, double *dx, const f77_int *incx, double *dy, const f77_int *incy, const double *dparam);
BLIS_EXPORT_BLIS void dscal(const f77_int *n, const double *da, double *dx, const f77_int *incx);
BLIS_EXPORT_BLIS double dnrm2(const f77_int *n, const double *x, const f77_int *incx);
BLIS_EXPORT_BLIS double dznrm2(const f77_int *n, const dcomplex *x, const f77_int *incx);
BLIS_EXPORT_BLIS void crotg(scomplex  *ca, bla_scomplex  *cb, bla_real  *c, scomplex  *s);
BLIS_EXPORT_BLIS void csrot(const f77_int *n, scomplex  *cx, const f77_int *incx, scomplex  *cy, const f77_int *incy, const float  *c, const float  *s);
BLIS_EXPORT_BLIS void cscal(const f77_int *n, const scomplex  *ca, scomplex  *cx, const f77_int *incx);
BLIS_EXPORT_BLIS void csscal(const f77_int *n, const float  *sa, scomplex  *cx, const f77_int *incx);
BLIS_EXPORT_BLIS void zrotg(dcomplex *ca, bla_dcomplex *cb, bla_double *c, dcomplex *s);
BLIS_EXPORT_BLIS void zdrot(const f77_int *n, dcomplex *cx, const f77_int *incx, dcomplex *cy, const f77_int *incy, const double *c, const double *s);
BLIS_EXPORT_BLIS void zscal(const f77_int *n, const dcomplex *za, dcomplex *zx, const f77_int *incx);
BLIS_EXPORT_BLIS void zdscal(const f77_int *n, const double *da, dcomplex *zx, const f77_int *incx);
BLIS_EXPORT_BLIS void sgemv(const char   *trans, const f77_int *m, const f77_int *n, const float  *alpha, const float  *a, const f77_int *lda, const float  *x, const f77_int *incx, const float  *beta, float  *y, const f77_int *incy);
BLIS_EXPORT_BLIS void strmv(const char   *uplo, const char   *trans, const char   *diag, const f77_int *n, const float  *a, const f77_int *lda, float  *x, const f77_int *incx);
BLIS_EXPORT_BLIS void strsv(const char   *uplo, const char   *trans, const char   *diag, const f77_int *n, const float  *a, const f77_int *lda, float  *x, const f77_int *incx);
BLIS_EXPORT_BLIS void sger(const f77_int *m, const f77_int *n, const float  *alpha, const float  *x, const f77_int *incx, const float  *y, const f77_int *incy, float  *a, const f77_int *lda);
BLIS_EXPORT_BLIS void dgemv(const char   *trans, const f77_int *m, const f77_int *n, const double *alpha, const double *a, const f77_int *lda, const double *x, const f77_int *incx, const double *beta, double *y, const f77_int *incy);
BLIS_EXPORT_BLIS void dtrmv(const char   *uplo, const char   *trans, const char   *diag, const f77_int *n, const double *a, const f77_int *lda, double *x, const f77_int *incx);
BLIS_EXPORT_BLIS void dtrsv(const char   *uplo, const char   *trans, const char   *diag, const f77_int *n, const double *a, const f77_int *lda, double *x, const f77_int *incx);
BLIS_EXPORT_BLIS void dger(const f77_int *m, const f77_int *n, const double *alpha, const double *x, const f77_int *incx, const double *y, const f77_int *incy, double *a, const f77_int *lda);
BLIS_EXPORT_BLIS void cgemv(const char   *trans, const f77_int *m, const f77_int *n, const scomplex  *alpha, const scomplex  *a, const f77_int *lda, const scomplex  *x, const f77_int *incx, const scomplex  *beta, scomplex  *y, const f77_int *incy);
BLIS_EXPORT_BLIS void ctrmv(const char   *uplo, const char   *trans, const char   *diag, const f77_int *n, const scomplex  *a, const f77_int *lda, scomplex  *x, const f77_int *incx);
BLIS_EXPORT_BLIS void ctrsv(const char   *uplo, const char   *trans, const char   *diag, const f77_int *n, const  scomplex *a, const f77_int *lda, scomplex  *x, const f77_int *incx);
BLIS_EXPORT_BLIS void cgerc(const f77_int *m, const f77_int *n, const scomplex  *alpha, const scomplex  *x, const f77_int *incx, const scomplex  *y, const f77_int *incy, scomplex  *a, const f77_int *lda);
BLIS_EXPORT_BLIS void cgeru(const f77_int *m, const f77_int *n, const scomplex  *alpha, const scomplex  *x, const f77_int *incx, const scomplex  *y, const f77_int *incy, scomplex  *a, const f77_int *lda);
BLIS_EXPORT_BLIS void zgemv(const char   *trans, const f77_int *m, const f77_int *n, const dcomplex *alpha, const dcomplex *a, const f77_int *lda, const dcomplex *x, const f77_int *incx, const dcomplex *beta, dcomplex *y, const f77_int *incy);
BLIS_EXPORT_BLIS void ztrmv(const char   *uplo, const char   *trans, const char   *diag, const f77_int *n, const dcomplex *a, const f77_int *lda, dcomplex *x, const f77_int *incx);
BLIS_EXPORT_BLIS void ztrsv(const char   *uplo, const char   *trans, const char   *diag, const f77_int *n, const dcomplex *a, const f77_int *lda, dcomplex *x, const f77_int *incx);
BLIS_EXPORT_BLIS void zgeru(const f77_int *m, const f77_int *n, const dcomplex *alpha, const dcomplex *x, const f77_int *incx, const dcomplex *y, const f77_int *incy, dcomplex *a, const f77_int *lda);
BLIS_EXPORT_BLIS void zgerc(const f77_int *m, const f77_int *n, const dcomplex *alpha, const dcomplex *x, const f77_int *incx, const dcomplex *y, const f77_int *incy, dcomplex *a, const f77_int *lda);
typedef int16_t bfloat16;
typedef int16_t bfloat16;
typedef int16_t bfloat16;
typedef int16_t bfloat16;
typedef int16_t bfloat16;
		// Typedef official complex types to BLIS complex type names.
		typedef  float complex scomplex;
		typedef double complex dcomplex;
	typedef struct scomplex
	{
		float  real;
		float  imag;
	} scomplex;
	typedef struct dcomplex
	{
		double real;
		double imag;
	} dcomplex;
typedef int32_t   f77_int;
typedef int64_t   f77_int;
typedef long int  f77_int;