rstsr-openblas-ffi/src/f77blas.rs

    pub fn dmin(arg1: *mut blas_int, arg2: *mut f64, arg3: *mut blas_int) -> f64;
    pub fn qmin(arg1: *mut blas_int, arg2: *mut xdouble, arg3: *mut blas_int) -> xdouble;
    pub fn scmin(arg1: *mut blas_int, arg2: *mut f32, arg3: *mut blas_int) -> f32;
    pub fn dzmin(arg1: *mut blas_int, arg2: *mut f64, arg3: *mut blas_int) -> f64;
    pub fn qxmin(arg1: *mut blas_int, arg2: *mut xdouble, arg3: *mut blas_int) -> xdouble;
    pub fn sscal(arg1: *mut blas_int, arg2: *mut f32, arg3: *mut f32, arg4: *mut blas_int);
    pub fn dscal(arg1: *mut blas_int, arg2: *mut f64, arg3: *mut f64, arg4: *mut blas_int);
    pub fn qscal(arg1: *mut blas_int, arg2: *mut xdouble, arg3: *mut xdouble, arg4: *mut blas_int);
    pub fn cscal(arg1: *mut blas_int, arg2: *mut f32, arg3: *mut f32, arg4: *mut blas_int);
    pub fn zscal(arg1: *mut blas_int, arg2: *mut f64, arg3: *mut f64, arg4: *mut blas_int);
    pub fn xscal(arg1: *mut blas_int, arg2: *mut xdouble, arg3: *mut xdouble, arg4: *mut blas_int);
    pub fn csscal(arg1: *mut blas_int, arg2: *mut f32, arg3: *mut f32, arg4: *mut blas_int);
    pub fn zdscal(arg1: *mut blas_int, arg2: *mut f64, arg3: *mut f64, arg4: *mut blas_int);
    pub fn xqscal(arg1: *mut blas_int, arg2: *mut xdouble, arg3: *mut xdouble, arg4: *mut blas_int);
    pub fn snrm2(arg1: *mut blas_int, arg2: *mut f32, arg3: *mut blas_int) -> f32;
    pub fn scnrm2(arg1: *mut blas_int, arg2: *mut f32, arg3: *mut blas_int) -> f32;
    pub fn dnrm2(arg1: *mut blas_int, arg2: *mut f64, arg3: *mut blas_int) -> f64;
    pub fn qnrm2(arg1: *mut blas_int, arg2: *mut xdouble, arg3: *mut blas_int) -> xdouble;
    pub fn dznrm2(arg1: *mut blas_int, arg2: *mut f64, arg3: *mut blas_int) -> f64;
    pub fn qxnrm2(arg1: *mut blas_int, arg2: *mut xdouble, arg3: *mut blas_int) -> xdouble;
    pub fn srot(
        arg1: *mut blas_int,
        arg2: *mut f32,
        arg3: *mut blas_int,
        arg4: *mut f32,
        arg5: *mut blas_int,
        arg6: *mut f32,
        arg7: *mut f32,
    );
    pub fn drot(
        arg1: *mut blas_int,
        arg2: *mut f64,
        arg3: *mut blas_int,
        arg4: *mut f64,
        arg5: *mut blas_int,
        arg6: *mut f64,
        arg7: *mut f64,
    );
    pub fn qrot(
        arg1: *mut blas_int,
        arg2: *mut xdouble,
        arg3: *mut blas_int,
        arg4: *mut xdouble,
        arg5: *mut blas_int,
        arg6: *mut xdouble,
        arg7: *mut xdouble,
    );
    pub fn csrot(
        arg1: *mut blas_int,
        arg2: *mut f32,
        arg3: *mut blas_int,
        arg4: *mut f32,
        arg5: *mut blas_int,
        arg6: *mut f32,
        arg7: *mut f32,
    );
    pub fn zdrot(
        arg1: *mut blas_int,
        arg2: *mut f64,
        arg3: *mut blas_int,
        arg4: *mut f64,
        arg5: *mut blas_int,
        arg6: *mut f64,
        arg7: *mut f64,
    );
    pub fn xqrot(
        arg1: *mut blas_int,
        arg2: *mut xdouble,
        arg3: *mut blas_int,
        arg4: *mut xdouble,
        arg5: *mut blas_int,
        arg6: *mut xdouble,
        arg7: *mut xdouble,
    );
    pub fn srotg(arg1: *mut f32, arg2: *mut f32, arg3: *mut f32, arg4: *mut f32);
    pub fn drotg(arg1: *mut f64, arg2: *mut f64, arg3: *mut f64, arg4: *mut f64);
    pub fn qrotg(arg1: *mut xdouble, arg2: *mut xdouble, arg3: *mut xdouble, arg4: *mut xdouble);
    pub fn crotg(arg1: *mut f32, arg2: *mut f32, arg3: *mut f32, arg4: *mut f32);
    pub fn zrotg(arg1: *mut f64, arg2: *mut f64, arg3: *mut f64, arg4: *mut f64);
    pub fn xrotg(arg1: *mut xdouble, arg2: *mut xdouble, arg3: *mut xdouble, arg4: *mut xdouble);
    pub fn srotmg(arg1: *mut f32, arg2: *mut f32, arg3: *mut f32, arg4: *mut f32, arg5: *mut f32);
    pub fn drotmg(arg1: *mut f64, arg2: *mut f64, arg3: *mut f64, arg4: *mut f64, arg5: *mut f64);
    pub fn srotm(
        arg1: *mut blas_int,
        arg2: *mut f32,
        arg3: *mut blas_int,
        arg4: *mut f32,
        arg5: *mut blas_int,
        arg6: *mut f32,
    );
    pub fn drotm(
        arg1: *mut blas_int,
        arg2: *mut f64,
        arg3: *mut blas_int,
        arg4: *mut f64,
        arg5: *mut blas_int,
        arg6: *mut f64,
    );
    pub fn qrotm(
        arg1: *mut blas_int,
        arg2: *mut xdouble,
        arg3: *mut blas_int,
        arg4: *mut xdouble,
        arg5: *mut blas_int,
        arg6: *mut xdouble,
    );
    pub fn sger(
        arg1: *mut blas_int,
        arg2: *mut blas_int,
        arg3: *mut f32,
        arg4: *mut f32,
        arg5: *mut blas_int,
        arg6: *mut f32,
        arg7: *mut blas_int,
        arg8: *mut f32,
        arg9: *mut blas_int,
    );
    pub fn dger(
        arg1: *mut blas_int,
        arg2: *mut blas_int,
        arg3: *mut f64,
        arg4: *mut f64,
        arg5: *mut blas_int,
        arg6: *mut f64,
        arg7: *mut blas_int,
        arg8: *mut f64,
        arg9: *mut blas_int,
    );
    pub fn qger(
        arg1: *mut blas_int,
        arg2: *mut blas_int,
        arg3: *mut xdouble,
        arg4: *mut xdouble,
        arg5: *mut blas_int,
        arg6: *mut xdouble,
        arg7: *mut blas_int,
        arg8: *mut xdouble,
        arg9: *mut blas_int,
    );
    pub fn cgeru(
        arg1: *mut blas_int,
        arg2: *mut blas_int,
        arg3: *mut f32,
        arg4: *mut f32,
        arg5: *mut blas_int,
        arg6: *mut f32,
        arg7: *mut blas_int,
        arg8: *mut f32,
        arg9: *mut blas_int,
    );
    pub fn cgerc(
        arg1: *mut blas_int,
        arg2: *mut blas_int,
        arg3: *mut f32,
        arg4: *mut f32,
        arg5: *mut blas_int,
        arg6: *mut f32,
        arg7: *mut blas_int,
        arg8: *mut f32,
        arg9: *mut blas_int,
    );
    pub fn zgeru(
        arg1: *mut blas_int,
        arg2: *mut blas_int,
        arg3: *mut f64,
        arg4: *mut f64,
        arg5: *mut blas_int,
        arg6: *mut f64,
        arg7: *mut blas_int,
        arg8: *mut f64,
        arg9: *mut blas_int,
    );
    pub fn zgerc(
        arg1: *mut blas_int,
        arg2: *mut blas_int,
        arg3: *mut f64,
        arg4: *mut f64,
        arg5: *mut blas_int,
        arg6: *mut f64,
        arg7: *mut blas_int,
        arg8: *mut f64,
        arg9: *mut blas_int,
    );
    pub fn xgeru(
        arg1: *mut blas_int,
        arg2: *mut blas_int,
        arg3: *mut xdouble,
        arg4: *mut xdouble,
        arg5: *mut blas_int,
        arg6: *mut xdouble,
        arg7: *mut blas_int,
        arg8: *mut xdouble,
        arg9: *mut blas_int,
    );
    pub fn xgerc(
        arg1: *mut blas_int,
        arg2: *mut blas_int,
        arg3: *mut xdouble,
        arg4: *mut xdouble,
        arg5: *mut blas_int,
        arg6: *mut xdouble,
        arg7: *mut blas_int,
        arg8: *mut xdouble,
        arg9: *mut blas_int,
    );
    pub fn sbgemv(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut blas_int,
        arg4: *mut f32,
        arg5: *mut bfloat16,
        arg6: *mut blas_int,
        arg7: *mut bfloat16,
        arg8: *mut blas_int,
        arg9: *mut f32,
        arg10: *mut f32,
        arg11: *mut blas_int,
    );
    pub fn sgemv(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut blas_int,
        arg4: *mut f32,
        arg5: *mut f32,
        arg6: *mut blas_int,
        arg7: *mut f32,
        arg8: *mut blas_int,
        arg9: *mut f32,
        arg10: *mut f32,
        arg11: *mut blas_int,
    );
    pub fn dgemv(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut blas_int,
        arg4: *mut f64,
        arg5: *mut f64,
        arg6: *mut blas_int,
        arg7: *mut f64,
        arg8: *mut blas_int,
        arg9: *mut f64,
        arg10: *mut f64,
        arg11: *mut blas_int,
    );
    pub fn qgemv(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut blas_int,
        arg4: *mut xdouble,
        arg5: *mut xdouble,
        arg6: *mut blas_int,
        arg7: *mut xdouble,
        arg8: *mut blas_int,
        arg9: *mut xdouble,
        arg10: *mut xdouble,
        arg11: *mut blas_int,
    );
    pub fn cgemv(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut blas_int,
        arg4: *mut f32,
        arg5: *mut f32,
        arg6: *mut blas_int,
        arg7: *mut f32,
        arg8: *mut blas_int,
        arg9: *mut f32,
        arg10: *mut f32,
        arg11: *mut blas_int,
    );
    pub fn zgemv(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut blas_int,
        arg4: *mut f64,
        arg5: *mut f64,
        arg6: *mut blas_int,
        arg7: *mut f64,
        arg8: *mut blas_int,
        arg9: *mut f64,
        arg10: *mut f64,
        arg11: *mut blas_int,
    );
    pub fn xgemv(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut blas_int,
        arg4: *mut xdouble,
        arg5: *mut xdouble,
        arg6: *mut blas_int,
        arg7: *mut xdouble,
        arg8: *mut blas_int,
        arg9: *mut xdouble,
        arg10: *mut xdouble,
        arg11: *mut blas_int,
    );
    pub fn strsv(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut c_char,
        arg4: *mut blas_int,
        arg5: *mut f32,
        arg6: *mut blas_int,
        arg7: *mut f32,
        arg8: *mut blas_int,
    );
    pub fn dtrsv(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut c_char,
        arg4: *mut blas_int,
        arg5: *mut f64,
        arg6: *mut blas_int,
        arg7: *mut f64,
        arg8: *mut blas_int,
    );
    pub fn qtrsv(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut c_char,
        arg4: *mut blas_int,
        arg5: *mut xdouble,
        arg6: *mut blas_int,
        arg7: *mut xdouble,
        arg8: *mut blas_int,
    );
    pub fn ctrsv(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut c_char,
        arg4: *mut blas_int,
        arg5: *mut f32,
        arg6: *mut blas_int,
        arg7: *mut f32,
        arg8: *mut blas_int,
    );
    pub fn ztrsv(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut c_char,
        arg4: *mut blas_int,
        arg5: *mut f64,
        arg6: *mut blas_int,
        arg7: *mut f64,
        arg8: *mut blas_int,
    );
    pub fn xtrsv(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut c_char,
        arg4: *mut blas_int,
        arg5: *mut xdouble,
        arg6: *mut blas_int,
        arg7: *mut xdouble,
        arg8: *mut blas_int,
    );
    pub fn strmv(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut c_char,
        arg4: *mut blas_int,
        arg5: *mut f32,
        arg6: *mut blas_int,
        arg7: *mut f32,
        arg8: *mut blas_int,
    );
    pub fn dtrmv(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut c_char,
        arg4: *mut blas_int,
        arg5: *mut f64,
        arg6: *mut blas_int,
        arg7: *mut f64,
        arg8: *mut blas_int,
    );
    pub fn qtrmv(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut c_char,
        arg4: *mut blas_int,
        arg5: *mut xdouble,
        arg6: *mut blas_int,
        arg7: *mut xdouble,
        arg8: *mut blas_int,
    );
    pub fn ctrmv(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut c_char,
        arg4: *mut blas_int,
        arg5: *mut f32,
        arg6: *mut blas_int,
        arg7: *mut f32,
        arg8: *mut blas_int,
    );
    pub fn ztrmv(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut c_char,
        arg4: *mut blas_int,
        arg5: *mut f64,
        arg6: *mut blas_int,
        arg7: *mut f64,
        arg8: *mut blas_int,
    );
